// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component Snapshot should match snapshot for all variants: button-default 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  jestAnimatedStyle={
    {
      "value": {
        "opacity": 1,
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
    }
  }
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#3b82f6",
      "borderColor": "#3b82f6",
      "borderRadius": 8,
      "borderWidth": 0,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 44,
      "opacity": 1,
      "paddingHorizontal": 24,
      "paddingVertical": 8,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        [
          {},
          {
            "color": "#0a0a0a",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "500",
            "lineHeight": 24,
          },
          [
            {
              "color": "#ffffff",
              "fontSize": 16,
            },
            undefined,
          ],
        ]
      }
    >
      default
    </Text>
  </View>
</View>
`;

exports[`Button Component Snapshot should match snapshot for all variants: button-destructive 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  jestAnimatedStyle={
    {
      "value": {
        "opacity": 1,
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
    }
  }
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#ef4444",
      "borderColor": "#ef4444",
      "borderRadius": 8,
      "borderWidth": 0,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 44,
      "opacity": 1,
      "paddingHorizontal": 24,
      "paddingVertical": 8,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        [
          {},
          {
            "color": "#0a0a0a",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "500",
            "lineHeight": 24,
          },
          [
            {
              "color": "#ffffff",
              "fontSize": 16,
            },
            undefined,
          ],
        ]
      }
    >
      destructive
    </Text>
  </View>
</View>
`;

exports[`Button Component Snapshot should match snapshot for all variants: button-ghost 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  jestAnimatedStyle={
    {
      "value": {
        "opacity": 1,
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
    }
  }
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "borderColor": "transparent",
      "borderRadius": 8,
      "borderWidth": 0,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 44,
      "opacity": 1,
      "paddingHorizontal": 24,
      "paddingVertical": 8,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        [
          {},
          {
            "color": "#0a0a0a",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "500",
            "lineHeight": 24,
          },
          [
            {
              "color": "#0a0a0a",
              "fontSize": 16,
            },
            undefined,
          ],
        ]
      }
    >
      ghost
    </Text>
  </View>
</View>
`;

exports[`Button Component Snapshot should match snapshot for all variants: button-outline 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  jestAnimatedStyle={
    {
      "value": {
        "opacity": 1,
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
    }
  }
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "borderColor": "#e5e7eb",
      "borderRadius": 8,
      "borderWidth": 1,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 44,
      "opacity": 1,
      "paddingHorizontal": 24,
      "paddingVertical": 8,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        [
          {},
          {
            "color": "#0a0a0a",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "500",
            "lineHeight": 24,
          },
          [
            {
              "color": "#0a0a0a",
              "fontSize": 16,
            },
            undefined,
          ],
        ]
      }
    >
      outline
    </Text>
  </View>
</View>
`;

exports[`Button Component Snapshot should match snapshot for default variant 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  jestAnimatedStyle={
    {
      "value": {
        "opacity": 1,
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
    }
  }
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#3b82f6",
      "borderColor": "#3b82f6",
      "borderRadius": 8,
      "borderWidth": 0,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 44,
      "opacity": 1,
      "paddingHorizontal": 24,
      "paddingVertical": 8,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        [
          {},
          {
            "color": "#0a0a0a",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "500",
            "lineHeight": 24,
          },
          [
            {
              "color": "#ffffff",
              "fontSize": 16,
            },
            undefined,
          ],
        ]
      }
    >
      Default
    </Text>
  </View>
</View>
`;
